--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <title>Frontend Mentor | Order summary card</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
+    </style>
+    <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
     Order Summary You can now listen to millions of songs, audiobooks, and
@@ -27,6 +30,7 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
+      <p>jkbcjkqbsck</p>
     </div>
   </body>
 </html>
