--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-      <p>jkbcjkqbsck</p>
+      <p>Adding test</p>
     </div>
   </body>
 </html>
