--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Your ddscds Name Here</a>.
       <p>Adding test</p>
     </div>
   </body>
