--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
-    Order Summary You can now listen to millions of songs, audiobooks, and
-    podcasts on any device anywhere you like! Annual Plan $69.99/year Change
-    Proceed to Payment Cancel Order
+    <div><h1>Order Summary</h1></div>
+    You can now listen to millions of songs, audiobooks, and podcasts on any
+    device anywhere you like! Annual Plan $69.99/year Change Proceed to Payment
+    Cancel Order
 
     <div class="attribution">
       Challenge by
