still in the beginning

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
     <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
-    <div><h1>Order Summary</h1></div>
-    You can now listen to millions of songs, audiobooks, and podcasts on any
-    device anywhere you like! Annual Plan $69.99/year Change Proceed to Payment
-    Cancel Order
+    <div class="center title">Order Summary</div>
+    <div>
+      <p class="center">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+    </div>
+    Annual Plan $69.99/year Change Proceed to Payment Cancel Order
 
     <div class="attribution">
       Challenge by
