--- a/index.html
+++ b/index.html
@@ -21,21 +21,37 @@
     <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
-    <div class="center title">Order Summary</div>
-    <div>
-      <p class="center">
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
-    </div>
-    Annual Plan $69.99/year Change Proceed to Payment Cancel Order
+    <div class="card">
+      <div class="img-hero"></div>
+      <div class="text-area">
+        <div class="center title">Order Summary</div>
+        <div>
+          <p class="center parag">
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+        </div>
+        <div class="container">
+          <div class="icon"><img src="./images/icon-music.svg" alt="" /></div>
+          <span>
+            <div class="plan">Annual Plan</div>
+            <div class="price">$69.99/year</div>
+          </span>
 
+          Change
+        </div>
+
+        <div class="proceed-btn">
+          <button type="button" class="btn">Proceed to Payment</button>
+        </div>
+        Cancel Order
+      </div>
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your ddscds Name Here</a>.
-      <p>Adding test</p>
+      >. Coded by <a href="#">Your ddscds Name Here</a>
     </div>
   </body>
 </html>
