--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
     </style>
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="card">
@@ -37,14 +37,13 @@
             <div class="plan">Annual Plan</div>
             <div class="price">$69.99/year</div>
           </span>
-
-          Change
+          <div class="change">Change</div>
         </div>
 
         <div class="proceed-btn">
           <button type="button" class="btn">Proceed to Payment</button>
         </div>
-        Cancel Order
+        <div class="cancel">Cancel Order</div>
       </div>
     </div>
     <div class="attribution">
