--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your ddscds Name Here</a>
+      >. Coded by
+      <a href="https://github.com/math198512/order-summary" target="_blank"
+        >math198512</a
+      >
     </div>
   </body>
 </html>
